# saphIR-project

./: .clang-format  .gitignore  CMakeLists.txt  GRAMMAR  LICENSE  Makefile  README  README.md  TODO  aarch64-compile.sh  compile.sh
cmake/: CapstoneKeystone.cmake  Fmt.cmake
compiler/: CMakeLists.txt  README.md
compiler/include/driver/: driver.hh
compiler/include/frontend/: exp.hh  stmt.hh
compiler/include/frontend/sema/: tycheck.hh
compiler/include/frontend/visitors/: default-visitor.hh  translate.hh
compiler/src/: main.cc
compiler/src/driver/: driver.cc
compiler/src/frontend/: exp.cc  stmt.cc
compiler/src/frontend/parser/: parser.yy  scanner.ll
compiler/src/frontend/sema/: tycheck.cc
compiler/src/frontend/visitors/: default-visitor.cc  pretty-printer.cc  transforms.cc  translate.cc
compiler/test/: array.jit  bits.jit  cmp.jit  cond.jit  fact.jit  fptr.jit  global.jit  mult_returns.jit  new.jit  pointers.jit  scopes.jit  single_function_multiple_param.jit  str.jit  sum.jit  variadic.jit  void.jit
dyn/: CMakeLists.txt  README.md
dyn/include/dyn/: base-emu.hh  emu.hh  emu.hxx  mmu.hh  mmu.hxx  unicorn-emu.hh
dyn/src/: arm_syscall_list.hh  base-emu.cc  emu.cc  fuzzer.cc  harness.cc  main.cc  mmu.cc  unicorn-emu.cc
elf/: CMakeLists.txt
elf/include/elf/: elf.hh
elf/src/: elf.cc  readelf.cc
fuzz/: CMakeLists.txt  README.md
fuzz/include/fuzz/: harness.hh  mutator.hh
fuzz/src/: fuzz.cc  harness.cc  mutator.cc
include/ass/: instr.hh
include/backend/: cfg.hh  color.hh  liveness.hh  regalloc.hh
include/backend/opt/: peephole.hh
include/driver/: driver.hh
include/frontend/: exp.hh  ops.hh  stmt.hh  types.hh
include/frontend/sema/: sema.hh  tycheck.hh
include/frontend/visitors/: default-visitor.hh  pretty-printer.hh  transforms.hh  translate.hh  visitor.hh
include/ir/: ir.hh  types.hh
include/ir/canon/: bb.hh  linearize.hh  trace.hh
include/ir/opt/: peephole.hh
include/ir/visitors/: default-ir-visitor.hh  ir-arith-optimizer.hh  ir-cloner-visitor.hh  ir-cloner-visitor.hxx  ir-cnst-obfuscator.hh  ir-pretty-printer.hh  ir-visitor.hh
include/mach/: access.hh  codegen.hh  frame.hh  target.hh
include/mach/aarch64/: aarch64-access.hh  aarch64-codegen.hh
include/mach/amd64/: amd64-codegen.hh  amd64-instr.hh  amd64-target.hh
include/utils/: algo.hh  algo.hxx  graph.hh  graph.hxx  misc.hh  random.hh  random.hxx  ref.hh  ref.hxx  scoped.hh  scoped.hxx  symbol.hh  temp.hh  uset.hh  uset.hxx
lifter/: CMakeLists.txt  README.md
lifter/include/lifter/: disas.hh  lifter-callbacks.hh  lifter.hh
lifter/src/: disas.cc  lifter-callbacks.cc  lifter.cc  main.cc
saphIR/: CMakeLists.txt  README.md
saphIR/include/asm-writer/: asm-writer.hh
saphIR/include/asm-writer/elf/: elf-asm-writer.hh
saphIR/include/ass/: instr.hh
saphIR/include/backend/: cfg.hh  dataflow.hh  graph-regalloc.hh  linear-regalloc.hh  liveness.hh  regalloc.hh
saphIR/include/ir/: ir.hh  ops.hh  types.hh
saphIR/include/ir/canon/: linearize.hh  simplify.hh  trace.hh
saphIR/include/ir/visitors/: default-ir-visitor.hh  ir-arith-optimizer.hh  ir-binop-optimizer.hh  ir-cloner-visitor.hh  ir-cloner-visitor.hxx  ir-cnst-obfuscator.hh  ir-pretty-printer.hh  ir-visitor.hh
saphIR/include/mach/: access.hh  codegen.hh  target.hh
saphIR/include/mach/aarch64/: aarch64-access.hh  aarch64-codegen.hh  aarch64-instr.hh  aarch64-target.hh
saphIR/include/mach/amd64/: amd64-access.hh  amd64-codegen.hh  amd64-instr.hh  amd64-target.hh
saphIR/src/asm-writer/: asm-writer.cc
saphIR/src/asm-writer/elf/: elf-asm-writer.cc
saphIR/src/ass/: instr.cc
saphIR/src/backend/: cfg.cc  color.cc  dataflow.cc  graph-regalloc.cc  linear-regalloc.cc  liveness.cc  regalloc.cc
saphIR/src/backend/opt/: peephole.cc
saphIR/src/ir/: ir.cc  ops.cc
saphIR/src/ir/canon/: bb.cc  linearize.cc  simplify.cc  trace.cc
saphIR/src/ir/visitors/: default-ir-visitor.cc  ir-arith-optimizer.cc  ir-binop-optimizer.cc  ir-cloner-visitor.cc  ir-cnst-obfuscator.cc  ir-pretty-printer.cc
saphIR/src/mach/: access.cc  target.cc
saphIR/src/mach/aarch64/: aarch64-access.cc  aarch64-codegen.cc  aarch64-common.cc  aarch64-instr.cc  aarch64-target.cc
saphIR/src/mach/amd64/: amd64-access.cc  amd64-codegen.cc  amd64-common.cc  amd64-common.hh  amd64-instr.cc  amd64-target.cc
src/: ast.hh  bin.hh  compile.cc  compile.hh  default-ir-visitor.hh  default-visitor.hh  driver.cc  driver.hh  exp.cc  exp.hh  frame.hh  ir-pretty-printer.hh  ir-visitor.hh  ir.hh  lexer.cc  lexer.hh  main.cc  num.hh  parser.cc  parser.hh  parser.yy  pretty-printer.hh  scanner.ll  scoped.hh  sema.cc  sema.hh  stmt.hh  symbol.cc  symbol.hh  temp.hh  token.cc  token.hh  transforms.cc  transforms.hh  translate.cc  translate.hh  tree.cc  tree.hh  types.cc  types.hh  (+2 more)
src/ass/: instr.cc
src/backend/: cfg.cc  color.cc  liveness.cc  regalloc.cc
src/backend/opt/: peephole.cc
src/driver/: driver.cc
src/frontend/: exp.cc  ops.cc  stmt.cc  types.cc
src/frontend/parser/: parser.yy  scanner.ll
src/frontend/sema/: sema.cc  tycheck.cc
src/frontend/visitors/: default-visitor.cc  pretty-printer.cc  transforms.cc  translate.cc
src/ir/: ir.cc  types.cc
src/ir/canon/: bb.cc  linearize.cc  trace.cc
src/ir/opt/: peephole.cc
src/ir/visitors/: default-ir-visitor.cc  ir-binop-optimizer.cc  ir-cloner-visitor.cc  ir-cnst-obfuscator.cc  ir-pretty-printer.cc
src/mach/: codegen.cc  frame.cc  target.cc
src/mach/aarch64/: aarch64-codegen.cc  aarch64-common.cc  aarch64-common.hh  aarch64-instr.cc  aarch64-target.cc
src/utils/: assert.cc
test/: array.jit  bits.jit  cond.jit  empty_bin.jit  everything.jit  fact.jit  fail.jit  fptr.jit  fun.jit  global.jit  import.jit  leak.jit  libc.jit  liveex.jit  logic.jit  long.jit  maelle.jit  many_numbers.jit  new.jit  parens.jit  pointers.jit  proto.jit  scopes.jit  simple.jit  single_function.jit  single_function_multiple_param.jit  str.jit  struct.jit  sum.jit  test.jit  while.jit
utils/: CMakeLists.txt
utils/src/: assert.cc  fs.cc  random.cc  symbol.cc  timer.cc  view.cc
(+30 files in other folders)
